# OpenGl-car

./: README.md  gradle.properties  settings.gradle
8mic/: CMakeLists.txt  build_arm.sh  build_arm64.sh
8mic/cpp/: UnimicHalJNI.cpp
8mic/libunimic/include/: uni_4mic_hal.h
8mic_ssp/: CMakeLists.txt  build.sh
8mic_ssp/cpp/: Uni4micHalJNI.cpp
8mic_ssp/ssp_hal/config/: FDMicArrayConfig.ini  pcm_hw_config.txt
8mic_ssp/ssp_hal/include/: ual_fixed_direct_enhance.h  uni_4mic_hal.h
8mic_ssp/ssp_hal/src/: uni_4mic_array.c  uni_4mic_array.h  uni_4mic_board_driver.c  uni_4mic_debug.c  uni_4mic_hal.c  uni_4mic_i2c_driver.c  uni_4mic_ringBuf.c  uni_4mic_ringBuf.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/circle/: fShader.glsl  vShader.glsl
app/src/main/assets/triangle/: vShader.glsl
app/src/main/java/com/aonions/opengl/: BaseActivity.kt  CameraActivity.kt  ExoActivity.kt  MainActivity.kt
app/src/main/java/com/aonions/opengl/adapter/: ListAdapter.kt
app/src/main/java/com/aonions/opengl/jni/: ISPJni.java  IoHandle.java  MainApp.kt
app/src/main/java/com/aonions/opengl/surface/: MyGLRender.kt  MyGLSurface.kt
app/src/main/java/com/aonions/opengl/utils/: CommonExt.kt  SingleRunner.kt
app/src/main/res/layout/: activity_exo_player.xml  activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
face/: CMakeLists.txt  build.sh  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
isp/: CMakeLists.txt
isp/main/: LogUtils.h  MainApp.cpp
opengl/: CMakeLists.txt  configure.sh
opengl/main/: JNIHelp.cpp  JNIHelp.h  LogUtils.h  MainApp.cpp  car_log.h  onload.cpp
opengl/main/glsl/: rect.glsl
opengl/main/glsl/triangle/: fShader.glsl
opengl/main/include/: GLUtils.h
opengl/main/include/common/: LogUtils.h  config.h
opengl/main/src/: GLRender.cpp  GLRender.h  GLUtils.cpp  GLUtils.h
opengl/main/utils/: FileUtils.cpp
rtmp/: CMakeLists.txt  configure.sh
rtmp/cpp/: h264_publish.cpp  native_publish.cpp
wav/: CMakeLists.txt  build.sh  configure.sh  redme.md
wav/com.unisound.musicpad.ffmpeg/: FFmpegExecutor.kt
wav/cpp/: ffmpeg_wrapper.cpp
